--- a/home/home.html
+++ b/home/home.html
@@ -9,18 +9,21 @@
 </head>
 <body>
 	<div class="main">
-		<button id="menu"><img src="images/menu.png" width="64px"></button>
-		<button id="profile"><img src="images/profile.png" width="64px"></button>
+		<button id="menu"><img src="images/menu.png" width="78px"></button>
+		<button id="profile"><img src="images/profile.png" width="78px"></button>
 		<div class="greetings">
 			<h1>Hello, user!</h1>
 			<p>Have a nice day!</p>
-			<input type="text" name="search" id="search" placeholder="Search">
-			<button id="settings"><img src="images/settings.png" width="64px"></button>
+			<input type="text" name="search" id="searchtext" placeholder="Search">
+			<button id="search"><img src="images/search.png" width="45px"></button>
+			<button id="settings"><img src="images/settings.png" width="50px"></button>
 		</div>
 		<div class="nav">
-			<button id="portfolios">Portfolios</button>
-			<button id="tasks">Tasks</button>
-			<button id="notes">Notes</button>
+			<center>
+				<button id="portfolios" class="navbutton">Portfolios</button>
+				<button id="tasks" class="navbutton">Tasks</button>
+				<button id="notes" class="navbutton">Notes</button>
+			</center>
 		</div>
 		<div id="process">
 			<h3>Process</h3>
